--- a/index.html
+++ b/index.html
@@ -1,16 +1,163 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>My Portfolio</title>
+    <title>CS180 Portfolio Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            font-family: 'Montserrat', Arial, sans-serif;
+            background: #fff;
+            margin: 0;
+            min-height: 100vh;
+        }
+
+        .navbar {
+            background: #002676;
+            color: #fff;
+            padding: 16px 32px;
+            font-size: 1.2em;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            box-shadow: 0 2px 8px rgba(99, 102, 241, 0.08);
+        }
+
+        .navbar-title {
+            font-weight: 700;
+            letter-spacing: 2px;
+        }
+
+        .profile {
+            display: flex;
+            align-items: center;
+            margin: 40px auto 24px auto;
+            max-width: 600px;
+            background: #FDB515;
+            border-radius: 16px;
+            box-shadow: 0 4px 24px rgba(99, 102, 241, 0.08);
+            padding: 32px;
+        }
+
+        .avatar {
+            width: 96px;
+            height: 96px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 32px;
+            border: 3px solid #002676;
+        }
+
+        .profile-info {
+            flex: 1;
+        }
+
+        .profile-info h2 {
+            margin: 0 0 8px 0;
+            font-size: 2em;
+            color: #002676;
+        }
+
+        .profile-info p {
+            margin: 0;
+            color: #fff;
+        }
+
+        .projects {
+            max-width: 900px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 32px;
+            padding: 24px 16px 48px 16px;
+        }
+
+        .project-card {
+            background: #FDB515;
+            border-radius: 14px;
+            box-shadow: 0 2px 12px rgba(99, 102, 241, 0.08);
+            transition: transform 0.2s, box-shadow 0.2s;
+            cursor: pointer;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .project-card:hover {
+            transform: translateY(-6px) scale(1.03);
+            box-shadow: 0 8px 32px rgba(99, 102, 241, 0.18);
+        }
+
+        .project-img {
+            width: 100%;
+            height: 160px;
+            object-fit: cover;
+        }
+
+        .project-content {
+            padding: 18px 16px 16px 16px;
+        }
+
+        .project-title {
+            font-size: 1.2em;
+            color: #002676;
+            font-weight: 700;
+            margin-bottom: 8px;
+        }
+
+        .project-desc {
+            color: #fff;
+            font-size: 1em;
+        }
+
+        .footer {
+            text-align: center;
+            color: #FDB515;
+            padding: 24px 0 12px 0;
+            font-size: 1em;
+            background: none;
+        }
+
+        @media (max-width: 600px) {
+            .profile {
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 20px;
+            }
+
+            .avatar {
+                margin: 0 0 16px 0;
+            }
         }
     </style>
 </head>
+
 <body>
-    <h1>Welcome to My CS180 Portfolio!</h1>
-    <a href="./1/index.html">Project 1</a>
+    <div class="navbar">
+        <span class="navbar-title">CS180 Portfolio Homepage</span>
+        <span>By DetachWu</span>
+    </div>
+    <div class="profile">
+        <img class="avatar" src="./1/media/4.jpg" alt="头像">
+        <div class="profile-info">
+            <h2>DetachWu</h2>
+            <p>Welcome to my CS180 portfolio homepage!<br>Here you can find my projects and achievements from the
+                course.</p>
+        </div>
+    </div>
+    <div class="projects">
+        <div class="project-card" onclick="window.location.href='./1/index.html'">
+            <img class="project-img" src="./1/media/overview.jpg" alt="Project 1">
+            <div class="project-content">
+                <div class="project-title">Project 0: Becoming Friends with Your Camera</div>
+                <div class="project-desc">Zoom in magic! Click to view details.</div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        &copy; 2025 DetachWu | CS180 Portfolio
+    </div>
 </body>
+
 </html>
