--- a/index.html
+++ b/index.html
@@ -68,9 +68,16 @@
             max-width: 900px;
             margin: 0 auto;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            grid-template-columns: 1fr;
             gap: 32px;
             padding: 24px 16px 48px 16px;
+        }
+
+        @media (min-width: 1000px) {
+            .projects {
+                grid-template-columns: 1fr;
+                max-width: 700px;
+            }
         }
 
         .project-card {
@@ -148,10 +155,19 @@
     </div>
     <div class="projects">
         <div class="project-card" onclick="window.location.href='./1/index.html'">
-            <img class="project-img" src="./1/media/overview.jpg" alt="Project 1">
+            <img class="project-img" src="./1/media/overview.jpg" alt="Project 0">
             <div class="project-content">
                 <div class="project-title">Project 0: Becoming Friends with Your Camera</div>
                 <div class="project-desc">Zoom in magic! Click to view details.</div>
+            </div>
+        </div>
+
+        <div class="project-card" onclick="window.location.href='./2/project1.html'">
+            <img class="project-img" src="./1/media/3.jpg" alt="Project 1">
+            <div class="project-content">
+                <div class="project-title">Project 1: Images of the Russian Empire</div>
+                <div class="project-desc">Colorizing the Prokudin-Gorskii photo collection. Click to view.
+                </div>
             </div>
         </div>
     </div>
