--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="project-card" onclick="window.location.href='./3/project2.html'">
+            <img class="project-img" src="./1/media/5.jpg" alt="Project 2">
+            <div class="project-content">
+                <div class="project-title">Project 2: Fun with Filters and Frequencies!</div>
+                <div class="project-desc">Image filtering and frequency domain manipulation. Click to view details.
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         &copy; 2025 DetachWu | CS180 Portfolio
