--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="project-card" onclick="window.location.href='./2/project1.html'">
-            <img class="project-img" src="./1/media/3.jpg" alt="Project 1">
+            <img class="project-img" src="./2/media/overview.jpg" alt="Project 1">
             <div class="project-content">
                 <div class="project-title">Project 1: Images of the Russian Empire</div>
                 <div class="project-desc">Colorizing the Prokudin-Gorskii photo collection. Click to view.
@@ -172,7 +172,7 @@
         </div>
 
         <div class="project-card" onclick="window.location.href='./3/project2.html'">
-            <img class="project-img" src="./1/media/5.jpg" alt="Project 2">
+            <img class="project-img" src="./3/media/overview.jpg" alt="Project 2">
             <div class="project-content">
                 <div class="project-title">Project 2: Fun with Filters and Frequencies!</div>
                 <div class="project-desc">Image filtering and frequency domain manipulation. Click to view details.
