--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="project-card" onclick="window.location.href='./4/project3.html'">
+            <img class="project-img" src="./4/media/overview.jpg" alt="Project 3">
+            <div class="project-content">
+                <div class="project-title">Project 3: IMAGE WARPING and MOSAICING</div>
+                <div class="project-desc">Getting your hands dirty in different aspects of image warping with a “cool” application -- image mosaicing. Click to view details.
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         &copy; 2025 DetachWu | CS180 Portfolio
