--- a/4/project3.html
+++ b/4/project3.html
@@ -124,6 +124,11 @@
 			object-fit: cover;
 		}
 
+		.equal-height-long img {
+			height: 500px;
+			object-fit: cover;
+		}
+
 		.equal-height-short img {
 			height: 200px;
 			object-fit: cover;
@@ -381,8 +386,134 @@ There are some built in functions that are able to do much of what is needed. Ho
 
 		</section>
 
-		<a class="back" href="../index.html">← Back to Course Home</a>
+		<!-- Part B: User-added section with four subsections B.1 - B.4 -->
+		<section id="PartB" class="section">
+			<h2>Part B</h2>
+			<p>A secondary goal is to learn how to read and implement a research paper. The project will consist of the following steps:<br>
+<br>
+B.1: Detecting corner features in an image (20 pts)<br>
+B.2: Extracting a Feature Descriptor for each feature point (20 pts)<br>
+B.3: Matching these feature descriptors between two images (20 pts)<br>
+B.4: Use a robust method (RANSAC) to compute and apply homographies (40 pts)<br>
+B.5: Bells & Whistles<br>
+<br>
+ 
 
+For the following sections, we will follow the paper “Multi-Image Matching using Multi-Scale Oriented Patches” by Brown et al. but with several simplifications.</p>
+		<section id="b1" class="section">
+			<h2>B.1</h2>
+				<div class="deliverables">
+				<ul>
+					<li>Start with Harris Interest Point Detector (Section 2).</li>
+					<li>Implement Adaptive Non-Maximal Suppression (ANMS, Section 3).</li>
+					<li>Here are the showcase of detected corners overlaid on image, with and without ANMS.</li>
+				</ul>
+				</div>
+				<div class="imggrid3 equal-height">
+					<figure>
+						<img src="./media/Indoor_2.jpg" alt="Original Image" />
+						<figcaption>Original Image</figcaption>
+					</figure>
+					<figure>
+						<img src="./media/harris_corners_original.png" alt="Harris Corners" />
+						<figcaption>Harris Corners</figcaption>
+					</figure>
+					<figure>
+						<img src="./media/harris_corners_anms.png" alt="ANMS Corners" />
+						<figcaption>ANMS Corners</figcaption>
+					</figure>
+				</div>
+		</section>
+
+		<section id="b2" class="section">
+			<h2>B.2</h2>
+				<div class="deliverables">
+				<ul>
+					<li>Implement Feature Descriptor extraction (Section 4 of the paper). Don’t worry about rotation-invariance – just extract axis-aligned 8x8 patches.</li>
+					<li>Note that it’s extremely important to sample these patches from the larger 40x40 window to have a nice big blurred descriptor.</li>
+					<li>Don’t forget to bias/gain-normalize the descriptors. Ignore the wavelet transform section.</li>
+					<li>Here is a visualization of 10 extracted normalized 8x8 feature descriptors and their corresponding keypoints.</li>
+				</ul>
+				</div>
+				<div class="image">
+					<img src="./media/selected_10_points.png" alt="Keypoints" />
+					<figcaption>Corresponding Keypoints</figcaption>
+				</div>
+				<div class="image">
+					<img src="./media/extracted_features.png" alt="Feature Descriptors" />
+					<figcaption>Extracted Feature</figcaption>
+				</div>
+
+		</section>
+
+		<section id="b3" class="section">
+			<h2>B.3</h2>
+			<div class="deliverables">
+				<ul>
+					<li>Implement Feature Matching (Section 5 of the paper). That is, you will need to find pairs of features that look similar and are thus likely to be good matches. For thresholding, use the simpler approach due to Lowe of thresholding on the ratio between the first and the second nearest neighbors. Consult Figure 6b in the paper for picking the threshold. Ignore Section 6 of the paper.(I use 0.60 for my threshold)</li>
+					<li>Here is a visualization of matched feature points between two images.</li>
+				</ul>
+				</div>
+			<div class="image">
+					<img src="./media/feature_matches.png" alt="B.3 image" />
+					<figcaption>Matched Feature Points</figcaption>
+			</div>
+		</section>
+
+			<section id="b4" class="section">
+				<h2>B.4</h2>
+				<div class="deliverables">
+				<ul>
+					<li>For step 4, use 4-point RANSAC as described in class to compute robust homography estimates. Then, produce mosaics by adapting your code from Part A. You may use the same images from part A, but show both manually and automatically stitched results side by side. Produce at least three mosaics.</li>
+					<li>Here are three example mosaics(auto vs manual) and their RANSAC Inlines and Outlines:</li>
+				</ul>
+				</div>
+				<div class="image">
+					<img src="./media/ransac_matches_1.png" alt="Original Image 1" />
+					<figcaption>Original Image 1</figcaption>
+				</div>
+				<div class="imggrid2 equal-height-long">
+					<figure>
+						<img src="./media/auto_blended_1.png" alt="Auto Blended Image 1" />
+						<figcaption>Auto Blended Image 1</figcaption>
+					</figure>
+					<figure>
+						<img src="./media/blended_image_1.png" alt="Manual Blended Image 1" />
+						<figcaption>Manual Blended Image 1</figcaption>
+					</figure>
+				</div>
+				<div class="image">
+					<img src="./media/ransac_matches_2.png" alt="Original Image 2" />
+					<figcaption>Original Image 2</figcaption>
+				</div>
+				<div class="imggrid2 equal-height-long">
+					<figure>
+						<img src="./media/auto_blended_2.png" alt="Auto Blended Image 2" />
+						<figcaption>Auto Blended Image 2</figcaption>
+					</figure>
+					<figure>
+						<img src="./media/blended_image_3.png" alt="Manual Blended Image 2" />
+						<figcaption>Manual Blended Image 2</figcaption>
+					</figure>
+				</div>
+				<div class="image">
+					<img src="./media/ransac_matches_3.png" alt="Original Image 3" />
+					<figcaption>Original Image 3</figcaption>
+				</div>
+				<div class="imggrid2 equal-height-long">
+					<figure>
+						<img src="./media/auto_blended_3.png" alt="Auto Blended Image 3" />
+						<figcaption>Auto Blended Image 3</figcaption>
+					</figure>
+					<figure>
+						<img src="./media/blended_image_2.png" alt="Manual Blended Image 3" />
+						<figcaption>Manual Blended Image 3</figcaption>
+					</figure>
+				</div>
+			</section>
+		</section>
+
+		<a class="back" href="../index.html">← Back to Course Home</a>
 	</div>
 </body>
 
