--- a/4/project3.html
+++ b/4/project3.html
@@ -124,6 +124,11 @@
 			object-fit: cover;
 		}
 
+		.equal-height-little-long img {
+			height: 400px;
+			object-fit: cover;
+		}
+
 		.equal-height-long img {
 			height: 500px;
 			object-fit: cover;
@@ -409,7 +414,7 @@ For the following sections, we will follow the paper “Multi-Image Matching usi
 					<li>Here are the showcase of detected corners overlaid on image, with and without ANMS.</li>
 				</ul>
 				</div>
-				<div class="imggrid3 equal-height">
+				<div class="imggrid3 equal-height-little-long">
 					<figure>
 						<img src="./media/Indoor_2.jpg" alt="Original Image" />
 						<figcaption>Original Image</figcaption>
