--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="project-card" onclick="window.location.href='./5/project4.html'">
+            <img class="project-img" src="./5/media/overview.svg" alt="Project 4">
+            <div class="project-content">
+                <div class="project-title">Project 4: Placeholder Project</div>
+                <div class="project-desc">A new project page has been added. Click to view the placeholder and replace with your content.</div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         &copy; 2025 DetachWu | CS180 Portfolio
