--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
 
         <div class="project-card" onclick="window.location.href='./5/project4.html'">
-            <img class="project-img" src="./5/media/overview.svg" alt="Project 4">
+            <img class="project-img" src="./5/media/0_2.jpg" alt="Project 4">
             <div class="project-content">
                 <div class="project-title">Project 4: Placeholder Project</div>
                 <div class="project-desc">A new project page has been added. Click to view the placeholder and replace with your content.</div>
