--- a/6/project5.html
+++ b/6/project5.html
@@ -422,6 +422,8 @@
 			<div class="image">
 				<img src="./media/1.6.png" alt="Classifier Free Guidance" />
 			</div>
+
+			<p>In this part, I implemented iterative denoising with Classifier-Free Guidance (CFG). For each timestep, I computed both the conditional and unconditional noise estimates from the UNet, then combined them using a guidance scale to amplify semantic alignment with the text prompt. The process progressively refines pure noise into a coherent image through multiple reverse diffusion steps. By sampling several times with different seeds, I was able to visualize diverse but high-quality image generations conditioned on the same prompt.</p>
 			<p>The point that impresses me most is that the shadow of the mountain in the water in sample 2 is accurate!</p>
 		</section>
 
@@ -526,6 +528,7 @@
 					<figcaption>Original Image</figcaption>
 				</figure>
 			</div>
+			<p>To start, I first ran the forward diffusion process to generate a noisy version of the Campanile image. Then, I applied the iterative_denoise_cfg function using different starting indices — [1, 3, 5, 7, 10, 20] — each representing a different noise level. The resulting images show a gradual refinement process: as the starting index increases, the denoised outputs become progressively closer to the origina</p>
 		</section>
 
 		<section id="1.7.1" class="section">
