--- a/6/project5.html
+++ b/6/project5.html
@@ -764,9 +764,12 @@
 					<li>2 illusions of your choice that change appearance when you flip it upside down</li>
 				</ul>
 			</div>
-			<div class="image">
+			<div class="imggrid2 equal-height-short">
 				<figure>
 					<img src="./media/1.8.png" alt="illusion" />
+				</figure>
+				<figure>
+					<img src="./media/1.8_5.png" alt="illusion" />
 				</figure>
 			</div>
 		</section>
@@ -869,6 +872,19 @@
 			</div>
 			<div class="imgstrip8">
 				<div class="imgstrip8-grid">
+					<img src="./media/78.png" alt="7">
+					<img src="./media/79.png" alt="2">
+					<img src="./media/80.png" alt="1">
+					<img src="./media/81.png" alt="0">
+					<img src="./media/82.png" alt="4">
+					<img src="./media/83.png" alt="1">
+					<img src="./media/84.png" alt="4">
+					<img src="./media/85.png" alt="9">
+				</div>
+				<div class="imgstrip8-caption">Denoised(epoch 1)</div>
+			</div>
+			<div class="imgstrip8">
+				<div class="imgstrip8-grid">
 					<img src="./media/17.png" alt="7">
 					<img src="./media/18.png" alt="2">
 					<img src="./media/19.png" alt="1">
@@ -878,7 +894,7 @@
 					<img src="./media/23.png" alt="4">
 					<img src="./media/24.png" alt="9">
 				</div>
-				<div class="imgstrip8-caption">Denoised</div>
+				<div class="imgstrip8-caption">Denoised(epoch 5)</div>
 			</div>
 		</section>
 
